--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -33,9 +33,13 @@ Andreas Kristiansen - 20092027\\}
 \vfill{}
 \begin{description}
 \item [{Implementation~code~and~test~results:}]
-\texttt{http://github.com/kasper0406/IO2013/}
+\texttt{http://github.com/kasper0406/IO13/}
 \end{description}
 \pagebreak{}\tableofcontents{}\pagebreak{}
+
+- Memory compressing
+- SSd
+- caching (memory
 
 \section{Introduction}
 \input{introduction.tex}
