--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -16,6 +16,8 @@
 
 \newcommand{\ord}{\operatorname{ord}}
 
+\graphicspath{ {../Project1/measurements/final/} }
+
 \begin{document}
 
 \title{IO\\Project 1}
@@ -129,7 +131,7 @@ the input stream.
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.8\textwidth]{images/buffered_input_low}
+  \includegraphics[width=0.8\textwidth]{buffered_input_low}
   \caption{Running times for the buffered input stream using different
     buffer sizes and varying $k$-values.}
   \label{fig:buffered-input}
@@ -147,7 +149,7 @@ input stream performs extremely poorly. The slowness is because the
 buffers in this case resides on disk, whereby buffering is worse than
 using no buffer at all. Larger choices of buffer size was also tried,
 which as expected showed a similar behaviour, and is therefore of no
-interest for use in sorting.
+interest for use in sorting\todo{Comment on ``curve'' for small buffers in plot.}.
 
 From Figure~\ref{fig:buffered-input}, it seems that a buffer size of 2
 MB provides the best compromise of running time and memory usage for
@@ -158,7 +160,7 @@ Figure~\ref{fig:buffered-output}.
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.8\textwidth]{images/buffered_output_low}
+  \includegraphics[width=0.8\textwidth]{buffered_output_low}
   \caption{Running times for the buffered output stream using different
     buffer sizes and varying $k$-values.}
   \label{fig:buffered-output}
@@ -190,7 +192,61 @@ expected when used in sorting.
 
 \subsection{MMap streams}
 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{mmap_input}
+  \caption{Running times for the mmap input stream, varying sizes of
+    mapped blocks and $k$-values.}
+  \label{fig:mmap-input}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{mmap_output}
+  \caption{Running times for the mmap output stream, varying sizes of
+    mapped blocks and $k$-values.}
+  \label{fig:mmap-output}
+\end{figure}
+
 \subsection{Other streams}
+This section will discuss the two remaining stream
+implementations. The first of these are the streams using the
+\texttt{fwrite} and \texttt{fread} C standard library calls, which
+themselves do buffering. At our test machine the default buffer size
+of \texttt{fread} and \texttt{fwrite} was 8
+kB. Figure~\ref{fig:fstreams} shows a plot of their performance.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{fstreams}
+  \caption{Running times for the streams using the \texttt{fwrite} and
+    \texttt{fread} standard library functions, varying the values of
+    $k$.}
+  \label{fig:fstreams}
+\end{figure}
+
+Comparing Figure~\ref{fig:fstreams} to our buffered streams, they show
+a very similar behaviour. This is as expected, since the streams
+should function in exactly the same way.
+
+We will now turn our attention to the streams using the \texttt{read}
+and \texttt{write} system calls directly. Due to extremely poor
+performance, we only did the measurements displayed in
+Table~\ref{tbl:poor-streams}\todo{Comment on these!}.
+
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{c|cc}
+    $k$ & Read time & Write time \\
+    \hline
+    1   & 129.752s  & 649.089s   \\
+    4   & 130.710s  & -          \\
+    16  & 135.268   & -          \\
+    64  & 184.103   & -          \\
+  \end{tabular}
+  \caption{Running times for the streams using \texttt{read} and
+    \texttt{write} system calls directly.}
+\end{table}
 
 \subsection{Relative comparison}
 In order to determine which stream to use, it is very important that
