More plots in report.

--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -252,6 +252,22 @@ the output stream performs decently for different $k$ values, as this
 indicate that the output stream is more robust for interleaved disk
 operations.
 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{best_input}
+  \caption{Comparison of the best input streams from each of the four
+    types of streams.}
+  \label{fig:best-input}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{best_output}
+  \caption{Comparison of the best output streams from each of the four
+    types of streams.}
+  \label{fig:best-output}
+\end{figure}
+
 \section{Sorting}
 
 %\section{Algorithms and data structures}
