--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -348,6 +348,32 @@ slightly worse at $k = 256$\todo{Do another plot justifying this?}.
 \section{Sorting}
 
 \subsection{Comparison with conventional sorting algorithms}
+In order to determine how well the external merge sort is performing,
+it has been benchmarked against conventional quick sort and heap sort
+implementations. The quick sort is from the C standard library, and
+the heap sort is from STL. A plot of the running time for the
+different sorting algorithms is shown in Figure~\ref{fig:best-sort}.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{best_sort}
+  \caption{Comparison of the different sorting algorithms varying the input size.}
+  \label{fig:best-sort}
+\end{figure}
+
+It can be seen that both quick sort and heap sort outperforms the
+external merge sort when $n \leq 2^{27}$, which is 512MB of
+elements. This is no surprise, since both quick and heap sort are
+in-place sorts. The test machine was equipped with 1GB memory, hence
+the two sorting algorithms can do everything without going to disk,
+while the external merge sort by construction have to do merging on
+the disk.
+
+The other thing to notice, is that as soon as the input does not fit
+the memory anymore $n \geq 2^{28}$ (1GB of elements), the external
+merge sort beats the quick and heap sorts hands down. This was also
+what we expected, wince the external merge sort should use the disk
+much more efficiently.
 
 \section{Conclusion}
 \input{conclusion.tex}
