Plot of sorting.

--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -347,6 +347,14 @@ slightly worse at $k = 256$\todo{Do another plot justifying this?}.
 
 \section{Sorting}
 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.8\textwidth]{sorting}
+  \caption{Time for sorting a 2GB file varying the memory size $M$ and
+    streams to merge in parallel $k$.}
+  \label{fig:sorting}
+\end{figure}
+
 \subsection{Comparison with conventional sorting algorithms}
 In order to determine how well the external merge sort is performing,
 it has been benchmarked against conventional quick sort and heap sort
