Updated plots and rapport

--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -132,7 +132,7 @@ the input stream.
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.8\textwidth]{buffered_input_low}
+  \includegraphics[width=0.8\textwidth]{buffered_input}
   \caption{Running times for the buffered input stream using different
     buffer sizes and varying $k$-values.}
   \label{fig:buffered-input}
@@ -161,7 +161,7 @@ Figure~\ref{fig:buffered-output}.
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.8\textwidth]{buffered_output_low}
+  \includegraphics[width=0.8\textwidth]{buffered_output}
   \caption{Running times for the buffered output stream using different
     buffer sizes and varying $k$-values.}
   \label{fig:buffered-output}
