--- a/Rapport1/conclusion.tex
+++ b/Rapport1/conclusion.tex
@@ -1,1 +1,14 @@
-...
+In the course of the project, four different stream implementations
+have been made and tested with an eye to the application of external
+merge sort. It was possible to single out a winner among the
+implemented streams, which was found it to be buffered streams with
+2MB of buffer size.
+
+It was found that the implemented external tremendously improved the
+performance of sorting large input, compared to conventional main
+memory sorting algorithms -- for sorting 2GB of integer elements, we
+found a performance increase of a factor\todo{insert impressive
+  facts.}.
+
+The overall findings of this project was therefore in agreement with
+what should be expected from the I/O-model for analyzing algorithms.
