--- a/Rapport1/introduction.tex
+++ b/Rapport1/introduction.tex
@@ -1,1 +1,3 @@
-...
+This report will describe and analyze the experiments and their
+outcome, for the implemented streams and sorting algorithms as
+explained in the project description.
