--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -90,12 +90,39 @@ the report.
 The code has the following source files.
 \begin{description}
 \item[main.cpp] Driver code for calling test code.
-\item[Test.hpp] Test framework for generating inputs and measuring
-  running times.
+\item[test.h] Test framework for testing streams and sorting with
+  different parameters.
+\item[utils.h] Responsible for generating large files for testing.
 \item[CMakeLists.txt] CMake file for the project specifying
   compilation options.
 
-\item Describe rest!\todo{Do this and correct filenames!}
+\item[rw\_stream.h] Shared code for streams using \texttt{write} and
+  \texttt{read} system calls. The unbuffered streams are implemented
+  in:
+  \begin{itemize}
+  \item read\_input\_stream.h
+  \item write\_output\_stream.h
+  \end{itemize}
+  The buffered streams are implemented in:
+  \begin{itemize}
+  \item buffered\_input\_stream.h
+  \item buffered\_output\_stream.h
+  \end{itemize}
+
+\item[f\_stream.h] Shared code for streams using \texttt{fwrite} and
+  \texttt{fread} functions from the C standard library. Specific
+  stream implementations are:
+  \begin{itemize}
+  \item fread\_input\_stream.h
+  \item fwrite\_output\_stream.h
+  \end{itemize}
+
+\item[mmap\_stream.h] Shared code for streams using memory mapping of
+  files. Specific stream implementations are:
+  \begin{itemize}
+  \item mmap\_input\_stream.h
+  \item mmap\_output\_stream.h
+  \end{itemize}
 \end{description}
 
 \section{Streams}
