--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -38,10 +38,6 @@ Kasper Nielsen - 20091182\\}
 \end{description}
 \pagebreak{}\tableofcontents{}\pagebreak{}
 
-- Memory compressing
-- SSd
-- caching (memory
-
 \section{Introduction}
 \input{introduction.tex}
 
@@ -50,30 +46,7 @@ This section presents the test setup, how measurements are performed
 and gives an overview of the files attached to this report.
 
 \subsection{Test setup}
-All measurements presented in this report were performed on a computer
-with an Intel Core i3-380UM CPU with the following technical
-specifications:
-\begin{itemize}
-\item 2 cores operating at 1.33GHz.
-\item 2 x 32KB L1 data cache. 2 x 256 KB L2 cache. Shared 3MB L3 cache.
-\end{itemize}
-The main memory size of the machine is 1 GB (with 600 - 700 MB free memory), and was running Ubuntu
-Linux 12.04. The hard drive was a USB2 attached Fujitsu MJA2250BH which has the following specifications:
-
-\begin{itemize}
-\item 250GB
-\item 5,400 RPM
-\item 8MB cache
-\end{itemize}
-
-All implementations have been
-written in C++11 and compiled on Linux using the GCC 4.7 compiler. When measurements were performed, the
-code was compiled using the \texttt{-O3 -flto -funroll-loops}
-optimization flags.
-
-In the beginning we ran our tests 3 times. However, to make it feasible
-to run our tests on bigger inputs, we adjusted our tests to only
-one trial for large inputs.
+\input{test_setup.tex}
 
 \subsection{File structure}
 The following is a description of the different folders handed in with
@@ -133,19 +106,19 @@ used in a relative performance benchmark for finding the stream most
 suitable for sorting.
 
 In order to mimic the behaviour of sorting during the test, we have
-tested the streams in respectively reading/writing $n$ elements from/to a file. Each test uses $k$ interleaved streams to do this, such
-that a new stream is starting at every $\frac{n}{k}$ elements, and
+tested the streams in respectively reading/writing $N$ elements from/to a file. Each test uses $k$ interleaved streams, such
+that a new stream is starting at every $\frac{N}{k}$ elements, and
 elements are being processed in a round robin fashion of the streams.
 
-All tests of the streams have used $n = 2^{28}$, which corresponds to
+All tests of the streams have used $N = 2^{28}$, which corresponds to
 1GB of elements. This choice was made to make sure the data could not be hold in memory in its entirety, and still small enough to be able to run all the tests within reasonably time. The
-value of $n$ has not been varied for the stream test, as it is not
+number of elements has not been varied for the stream test, as it is not
 expected that streams will behave differently, as long as the data is
 big enough to not fit the main memory.
 
 In the merge step in the sorting application, the input streams are
 used in a very similar way, the output streams are however only used
-in the $k = 1$ case\todo{?}, but we have chosen to do testing of these streams
+in the $k = 1$ case, but we have chosen to do testing of these streams
 for varying values of $k$, to be able to get comparable results
 between input and output streams.
 
@@ -153,12 +126,11 @@ between input and output streams.
 \label{sec:buffered-streams}
 This type of streams are implemented using the \texttt{read} and
 \texttt{write} POSIX system calls. On top of those, a buffer of size
-$B$ is maintained keeping track of the next elements to read or write.
+$B$ is added such that the system calls are only called once for $B$ elements.
 
 It will be investigated how the choice of buffer size and varying
 values of $k$ influences the
-performance. Figure~\ref{fig:buffered-input} shows a plot of this for
-the input stream.
+performance. Figure~\ref{fig:buffered-input} shows a plot of the performance for the buffered input stream.
 
 \begin{figure}[h!]
   \centering
@@ -169,15 +141,13 @@ the input stream.
 \end{figure}
 
 From Figure~\ref{fig:buffered-input} it seems like all the streams
-perform about the same for sequential read ($k = 1$), which is the
-case where the operating system and disk controller is also easily
-able to employ caching on lower levels.
+perform similarly for sequential read ($k = 1$). This is most likely because the operation system and the disk controller easily can classify the access pattern as sequential and hence, can cache the subsequent blocks with very low cost.
 
 As $k$ gets bigger, Figure~\ref{fig:buffered-input} indicates that
 bigger buffers gives better performance, which was expected. However,
 for large buffer sizes in combination with large values of $k$, the
 input stream performs extremely poorly. The slowness is because the
-buffers in this case resides on disk, whereby buffering is worse than
+buffers partly ends up on disk because of insufficient free memory, whereby buffering is worse than
 using no buffer at all. Larger choices of buffer size was also tried,
 which as expected showed a similar behaviour, and is therefore of no
 interest for use in sorting\todo{Comment on ``curve'' for small buffers in plot.}.
@@ -199,19 +169,20 @@ Figure~\ref{fig:buffered-output}.
 
 It is expected that the plots in Figure~\ref{fig:buffered-input} and
 Figure~\ref{fig:buffered-output} are similar, since the two streams
-are much alike. However, it is seen that the varying the buffer size
-almost have no effect on the performance of the output streams, except
-when they are too big to be in memory\todo{This seems to happen before
-  in the write case?}.
+are much alike. However, the plots shows that the varying the buffer sizes
+almost have no effect on the performance of the output streams (except
+when they are too big to be in memory.)\todo{This seems to happen before
+  in the write case?}
 
-Another experiment was performed to explain this behaviour, where the
+The disk controller has the choice of delaying writes to the disk platters by using its 8MB cache and wait until it receives more data in the same region of the disk. It thereby avoids random seeks. This could explain why varying buffer sizes performs equally.
+
+An experiment was performed, where the
 \texttt{fsync(2)}\footnote{The \texttt{fsync(2)} system call ensures
   that the file is written to disk immediately.} system call was
 called immediately after each write operation. It was found that both
-the input and output streams performed very similar, hence the absence\todo{er det fsync naar vi bruger write/read og ikke fread/fwrite?}
-of effect in buffer size change showed in
-Figure~\ref{fig:buffered-output} can be explained by the operating
-system delaying writes to the disk.\todo{Maaske mere sandsynligt at det er disken der goer det?}
+the input and output streams performed very similar, hence the absence \todo{er det fsync naar vi bruger write/read og ikke fread/fwrite?}
+of effect in varying buffer sizes showed in
+Figure~\ref{fig:buffered-output} can be explained by the write cache of the disk.
 
 A buffer size of 2 MB has been chosen to give the best trade-off
 between running time and memory consumption. From
@@ -219,7 +190,7 @@ Figure~\ref{fig:buffered-output} it seems like a tiny buffer would be
 a better choice, but if the operating system for some reason fails
 delay writes in the sorting application, a buffer size of 2 MB
 provides more confidence that the stream will actually perform as
-expected when used in sorting.
+expected when used in sorting.\todo{Lad os lige gaa over denne paragraf}
 
 \subsection{MMap streams}
 For the memory mapped streams, the \texttt{mmap} and \texttt{munmap}
@@ -318,7 +289,7 @@ As mentioned earlier, only one measurement was done for the output
 stream. It is a bit surprising that the output stream is so much
 slower than the input stream. The the smallest unit able to be written
 to the disk is a sector\todo{block?}, which on the test machine is
-512B\todo{Check this. Vi har mere data om dette nu. I buffered_input_xxxsmall.}. If smaller amount should be written, it is
+512B. If smaller amount should be written, it is\todo{Check this. Vi har mere data om dette nu. I buffered input xxxsmall}
 required that the sector is read, modified in memory and then written
 back to the disk. When the \texttt{write} system call is used without
 buffering, this happens every time an integer is written to the
