--- a/Rapport1/introduction.tex
+++ b/Rapport1/introduction.tex
@@ -1,3 +1,1 @@
-This report will describe and analyze the experiments and their
-outcome, for the implemented streams and sorting algorithms as
-explained in the project description.
+This report describes the implementation of an external Mergesort and analyses the performance characteristics of the implemented streams and sorting algorithms, as outlined in the project description.
