--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -99,8 +99,8 @@ The code has the following source files.
 \end{description}
 
 \section{Streams}
-This section will present how we benchmarked the four different
-streams, and an analysis of their performance. First each stream will
+This section presents how benchmarks of the four different
+streams were performed, and an analysis of their performance. First each stream will
 be treated separately and the best settings for each stream will be
 used in a relative performance benchmark for finding the stream most
 suitable for sorting.
