--- a/Rapport1/test_setup.tex
+++ b/Rapport1/test_setup.tex
@@ -2,11 +2,13 @@ All measurements presented in this report were performed on a computer
 with an Intel Core i3-380UM CPU with the following technical
 specifications:
 \begin{itemize}
-\item 2 cores operating at 1.33GHz.
-\item 2 x 32KB L1 data cache. 2 x 256 KB L2 cache. Shared 3MB L3 cache.
+\item 2 cores operating at 1.33GHz
+\item 2 x 32KB L1 data cache
+\item 2 x 256 KB L2 cache
+\item Shared 3MB L3 cache
 \end{itemize}
-The main memory size of the machine was 1 GB (with 600 - 700 MB free memory), and was running Ubuntu
-Linux 12.04. The hard drive was a USB2 attached Fujitsu MJA2250BH which has the following specifications:
+The main memory size of the machine was 1 GB (with 600MB - 700MB free memory), and the machine was running Ubuntu
+Linux 12.04. The hard drive was an USB2 attached Fujitsu MJA2250BH which has the following specifications:
 
 \begin{itemize}
 \item 250GB
